deploy/k8s/08-nodeport.yaml
# 04-nodeport/nodeport.yaml (Converted to L4 LoadBalancer)
apiVersion: v1
kind: Service
metadata:
  name: linux-net-lb
  namespace: linux-net
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.155.30.40
    metallb.universe.tf/allow-shared-ip: "linux-net-services"
  labels:
    app: linux-net
spec:
  type: LoadBalancer
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
  selector:
    app: linux-net
    component: controller
---
apiVersion: v1
kind: Service
metadata:
  name: vault-lb
  namespace: linux-net
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.155.30.40
    metallb.universe.tf/allow-shared-ip: "linux-net-services"
  labels:
    app: vault
spec:
  type: LoadBalancer
  ports:
  - port: 8200
    targetPort: 8200
    protocol: TCP
    name: http
  selector:
    app: vault
