deploy/k8s/09-mongodb.yaml
# Service to expose MongoDB with the name used in LinuxNet config
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: linux-net
spec:
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb-svc # Default label applied by operator
